creado main de prueba