@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com</groupId>
-    <artifactId>AMC_Prac2</artifactId>
+    <groupId>com.AMC</groupId>
+    <artifactId>Prac2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -10,4 +10,28 @@
         <maven.compiler.release>21</maven.compiler.release>
         <exec.mainClass>com.amc_prac2.AMC_Prac2</exec.mainClass>
     </properties>
+    <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/datasets</directory>
+                <includes>
+                    <include>**/*</include> <!-- Incluye todos los archivos -->
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    
 </project>
